[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diagrams"
version = "0.24.4"
description = "Diagram as Code"
license = {text = "MIT"}
authors = [
    {name = "mingrammer", email = "mingrammer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "graphviz>=0.13.2,<0.21.0",
    "jinja2>=2.10,<4.0",
    "typed-ast>=1.5.5; python_version<'3.8'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "rope>=1.13",
    "ruff>=0.8.0",
    "pre-commit>=4.3.0",
]

[project.scripts]
diagrams = "diagrams.cli:main"

[project.urls]
Homepage = "https://diagrams.mingrammer.com"
Repository = "https://github.com/mingrammer/diagrams"

[tool.hatch.build.targets.wheel]
packages = ["diagrams"]

[tool.hatch.build]
include = [
    "diagrams/**/*",
    "resources/**/*",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
